--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -108,6 +108,7 @@ permissions:
   - 'create paragraph content list_of_links_item'
   - 'create paragraph content mainheading'
   - 'create paragraph content news_list'
+  - 'create paragraph content notification'
   - 'create paragraph content phone_number_box'
   - 'create paragraph content remote_video'
   - 'create paragraph content search'
@@ -175,6 +176,7 @@ permissions:
   - 'delete paragraph content list_of_links_item'
   - 'delete paragraph content mainheading'
   - 'delete paragraph content news_list'
+  - 'delete paragraph content notification'
   - 'delete paragraph content phone_number_box'
   - 'delete paragraph content remote_video'
   - 'delete paragraph content search'
@@ -251,6 +253,7 @@ permissions:
   - 'update paragraph content list_of_links_item'
   - 'update paragraph content mainheading'
   - 'update paragraph content news_list'
+  - 'update paragraph content notification'
   - 'update paragraph content phone_number_box'
   - 'update paragraph content remote_video'
   - 'update paragraph content search'
@@ -300,6 +303,7 @@ permissions:
   - 'view paragraph content list_of_links_item'
   - 'view paragraph content mainheading'
   - 'view paragraph content news_list'
+  - 'view paragraph content notification'
   - 'view paragraph content phone_number_box'
   - 'view paragraph content remote_video'
   - 'view paragraph content search'
