--- a/conf/cmi/core.entity_form_display.paragraph.hero.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.hero.default.yml
@@ -22,21 +22,29 @@ mode: default
 content:
   field_custom_hero_image:
     type: media_library_widget
-    weight: 1
+    weight: 2
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_hero_desc:
     type: text_textarea
-    weight: 0
+    weight: 1
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_hero_title:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   translation:
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -47,5 +55,4 @@ hidden:
   field_hero_image: true
   field_hero_link: true
   field_hero_link_design: true
-  field_hero_title: true
   status: true
