--- a/conf/cmi/core.entity_form_display.paragraph.events_list.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.events_list.default.yml
@@ -4,8 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.events_list.field_background_color
+    - field.field.paragraph.events_list.field_event_tag_filter
+    - field.field.paragraph.events_list.field_events_list_desc
     - field.field.paragraph.events_list.field_title
     - paragraphs.paragraphs_type.events_list
+  module:
+    - text
 id: paragraph.events_list.default
 targetEntityType: paragraph
 bundle: events_list
@@ -13,7 +17,7 @@ mode: default
 content:
   field_background_color:
     type: entity_reference_autocomplete
-    weight: 0
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -21,9 +25,23 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_event_tag_filter:
+    type: options_select
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_events_list_desc:
+    type: text_textarea
+    weight: 2
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   field_title:
     type: string_textfield
-    weight: 1
+    weight: 0
     region: content
     settings:
       size: 60
