--- a/conf/cmi/core.entity_view_display.node.event.default.yml
+++ b/conf/cmi/core.entity_view_display.node.event.default.yml
@@ -19,7 +19,6 @@ dependencies:
     - field.field.node.event.field_start_time
     - field.field.node.event.field_tags
     - field.field.node.event.field_text
-    - field.field.node.event.field_title
     - node.type.event
   module:
     - link
@@ -49,14 +48,6 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
-  field_title:
-    type: string
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 1
-    region: content
   links:
     settings: {  }
     third_party_settings: {  }
@@ -78,3 +69,4 @@ hidden:
   field_tags: true
   field_text: true
   langcode: true
+  search_api_excerpt: true
