--- a/conf/cmi/core.entity_view_display.node.event.teaser.yml
+++ b/conf/cmi/core.entity_view_display.node.event.teaser.yml
@@ -20,7 +20,6 @@ dependencies:
     - field.field.node.event.field_start_time
     - field.field.node.event.field_tags
     - field.field.node.event.field_text
-    - field.field.node.event.field_title
     - node.type.event
   module:
     - user
@@ -51,5 +50,5 @@ hidden:
   field_start_time: true
   field_tags: true
   field_text: true
-  field_title: true
   langcode: true
+  search_api_excerpt: true
