--- a/conf/cmi/field.field.paragraph.events_list.field_title.yml
+++ b/conf/cmi/field.field.paragraph.events_list.field_title.yml
@@ -9,7 +9,7 @@ id: paragraph.events_list.field_title
 field_name: field_title
 entity_type: paragraph
 bundle: events_list
-label: title
+label: Title
 description: ''
 required: false
 translatable: false
