THF-269: THF-269: THF-269: THF-269: THF-269: sidebar notification styles modified

--- a/conf/cmi/core.entity_form_display.node.landing_page.default.yml
+++ b/conf/cmi/core.entity_form_display.node.landing_page.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - hdbt_admin_editorial
     - metatag
     - paragraphs
+    - paragraphs_features
     - path
     - scheduler
 third_party_settings:
@@ -25,15 +26,15 @@ third_party_settings:
       label: Notification
       region: content
       parent_name: ''
-      weight: 20
+      weight: -99
       format_type: details_sidebar
       format_settings:
-        classes: ''
-        show_empty_fields: true
+        classes: formDsiplay_sidebar_notification
+        show_empty_fields: false
         id: ''
-        open: true
+        open: false
         description: 'For notifications'
-        required_fields: true
+        required_fields: false
         weight: 0
 _core:
   default_config_hash: 2UzmhcoLdP813geh94iPT1sXBgLAMVxYuUQcmTqnl5M
@@ -102,17 +103,30 @@ content:
       use_details: true
     third_party_settings: {  }
   field_notification:
-    type: entity_reference_paragraphs
-    weight: 2
+    type: paragraphs
+    weight: 0
     region: content
     settings:
       title: Paragraph
       title_plural: Paragraphs
       edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: notification
-    third_party_settings: {  }
+      default_paragraph_type: _none
+      features:
+        add_above: '0'
+        collapse_edit_all: '0'
+        duplicate: '0'
+    third_party_settings:
+      paragraphs_features:
+        add_in_between: false
+        add_in_between_link_count: 3
+        delete_confirmation: false
+        split_text: false
+        show_drag_and_drop: false
   langcode:
     type: language_select
     weight: 0
