THF-266: THF-266: permission to clone nodes for authenticated user

--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -69,7 +69,10 @@ permissions:
   - 'administer url aliases'
   - 'administer views'
   - 'cancel account'
+  - 'clone article content'
   - 'clone blog content'
+  - 'clone event content'
+  - 'clone landing_page content'
   - 'clone news content'
   - 'clone page content'
   - 'create audio media'
