--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -20,6 +20,8 @@ module:
   config_translation: 0
   config_update: 0
   consumers: 0
+  content_lock: 0
+  content_lock_timeout: 0
   contextual: 0
   crop: 0
   ctools: 0
@@ -39,6 +41,7 @@ module:
   field_group: 0
   field_ui: 0
   file: 0
+  filelog: 0
   filter: 0
   focal_point: 0
   gin_toolbar: 0
@@ -49,8 +52,10 @@ module:
   hdbt_hyphenopoly: 0
   helfi_api_base: 0
   helfi_azure_fs: 0
+  helfi_events: 0
   helfi_media: 0
   helfi_platform_config: 0
+  helfi_toc: 0
   helfi_tpr: 0
   image: 0
   image_style_quality: 0
@@ -84,6 +89,7 @@ module:
   oembed_providers: 0
   options: 0
   page_cache: 0
+  paragraphs_asymmetric_translation_widgets: 0
   paragraphs_features: 0
   paragraphs_type_permissions: 0
   path: 0
@@ -93,6 +99,7 @@ module:
   readonly_field_widget: 0
   redirect: 0
   responsive_image: 0
+  role_delegation: 0
   scheduler: 0
   search: 0
   search_api: 0
@@ -103,7 +110,6 @@ module:
   simple_oauth: 0
   social_media: 0
   subrequests: 0
-  syslog: 0
   system: 0
   taxonomy: 0
   telephone: 0
