--- a/conf/cmi/field.field.node.page.field_lower_content.yml
+++ b/conf/cmi/field.field.node.page.field_lower_content.yml
@@ -5,14 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_lower_content
     - node.type.page
-    - paragraphs.paragraphs_type.accordion
-    - paragraphs.paragraphs_type.banner
-    - paragraphs.paragraphs_type.columns
-    - paragraphs.paragraphs_type.content_cards
-    - paragraphs.paragraphs_type.image
-    - paragraphs.paragraphs_type.list_of_links
-    - paragraphs.paragraphs_type.remote_video
-    - paragraphs.paragraphs_type.text
+    - paragraphs.paragraphs_type.sujo_embedded
   module:
     - entity_reference_revisions
 _core:
@@ -31,25 +24,18 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
-      text: text
-      columns: columns
-      accordion: accordion
-      image: image
-      list_of_links: list_of_links
-      content_cards: content_cards
-      banner: banner
-      remote_video: remote_video
+      sujo_embedded: sujo_embedded
     negate: 0
     target_bundles_drag_drop:
       accordion:
         weight: -27
-        enabled: true
+        enabled: false
       accordion_item:
         weight: -22
         enabled: false
       banner:
         weight: -21
-        enabled: true
+        enabled: false
       blog_list:
         weight: 40
         enabled: false
@@ -61,12 +47,15 @@ settings:
         enabled: false
       columns:
         weight: -28
-        enabled: true
+        enabled: false
       content_cards:
         weight: -23
-        enabled: true
+        enabled: false
       content_liftup:
         weight: -22
+        enabled: false
+      event_list:
+        weight: 30
         enabled: false
       events_list:
         weight: 46
@@ -88,15 +77,9 @@ settings:
         enabled: false
       image:
         weight: -26
-        enabled: true
-      image_and_card:
-        weight: 53
         enabled: false
       info:
         weight: 54
-        enabled: false
-      lead:
-        weight: 55
         enabled: false
       liftup_with_image:
         weight: -18
@@ -109,22 +92,22 @@ settings:
         enabled: false
       list_of_links:
         weight: -24
-        enabled: true
+        enabled: false
       list_of_links_item:
         weight: -17
         enabled: false
-      mainheading:
-        weight: 61
-        enabled: false
       news_list:
         weight: 62
+        enabled: false
+      notification:
+        weight: 60
         enabled: false
       phone_number_box:
         weight: 63
         enabled: false
       remote_video:
         weight: 32
-        enabled: true
+        enabled: false
       search:
         weight: 65
         enabled: false
@@ -139,10 +122,10 @@ settings:
         enabled: false
       sujo_embedded:
         weight: 69
-        enabled: false
+        enabled: true
       text:
         weight: -29
-        enabled: true
+        enabled: false
       unit_search:
         weight: -16
         enabled: false
