--- a/conf/cmi/pathauto.pattern.event_pattern.yml
+++ b/conf/cmi/pathauto.pattern.event_pattern.yml
@@ -11,7 +11,7 @@ type: 'canonical_entities:node'
 pattern: 'tapahtumat/[node:title]'
 selection_criteria:
   6631ea7b-056d-4f20-b408-50ccd8ebd9eb:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: 6631ea7b-056d-4f20-b408-50ccd8ebd9eb
     context_mapping:
