--- a/conf/cmi/pathauto.pattern.event_pattern_en.yml
+++ b/conf/cmi/pathauto.pattern.event_pattern_en.yml
@@ -11,7 +11,7 @@ type: 'canonical_entities:node'
 pattern: 'events/[node:title]'
 selection_criteria:
   a9237037-a5c2-47cc-a8c8-4237ed02ddb3:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: a9237037-a5c2-47cc-a8c8-4237ed02ddb3
     context_mapping:
