--- a/conf/cmi/pathauto.pattern.event_pattern_sv.yml
+++ b/conf/cmi/pathauto.pattern.event_pattern_sv.yml
@@ -11,7 +11,7 @@ type: 'canonical_entities:node'
 pattern: 'evenemang/[node:title]'
 selection_criteria:
   f094ff8b-1d1c-49a5-b504-4244374b7f1b:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: f094ff8b-1d1c-49a5-b504-4244374b7f1b
     context_mapping:
