Add and enable redis module. Drupal security update.

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/next": "^1.2",
         "drupal/paragraphs_features": "^1.11",
         "drupal/quick_node_clone": "^1.14",
+        "drupal/redis": "^1.5",
         "drush/drush": "^10.4"
     },
     "require-dev": {
