--- a/conf/cmi/paragraphs.paragraphs_type.events_list.yml
+++ b/conf/cmi/paragraphs.paragraphs_type.events_list.yml
@@ -6,5 +6,5 @@ id: events_list
 label: 'Events list'
 icon_uuid: null
 icon_default: null
-description: ''
+description: 'Työllisyyspalvelut custom event list'
 behavior_plugins: {  }
