--- a/conf/cmi/search_api.index.events_fi.yml
+++ b/conf/cmi/search_api.index.events_fi.yml
@@ -109,6 +109,12 @@ field_settings:
     dependencies:
       module:
         - node
+  url:
+    label: URI
+    property_path: search_api_url
+    type: string
+    configuration:
+      absolute: true
 datasource_settings:
   'entity:node':
     bundles:
