--- a/conf/cmi/filter.format.basic_html.yml
+++ b/conf/cmi/filter.format.basic_html.yml
@@ -18,7 +18,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol type start> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <br> <span> <a href hreflang data-entity-substitution data-entity-type data-entity-uuid title class="link-internal link-external"> <u> <s>'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol type start> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <br> <a href hreflang data-entity-substitution data-entity-type data-entity-uuid title class="link-internal link-external"> <u> <s>'
       filter_html_help: false
       filter_html_nofollow: false
   filter_align:
