--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -114,6 +114,7 @@ permissions:
   - 'create paragraph content news_list'
   - 'create paragraph content notification'
   - 'create paragraph content phone_number_box'
+  - 'create paragraph content quote'
   - 'create paragraph content remote_video'
   - 'create paragraph content search'
   - 'create paragraph content service_list'
@@ -182,6 +183,7 @@ permissions:
   - 'delete paragraph content news_list'
   - 'delete paragraph content notification'
   - 'delete paragraph content phone_number_box'
+  - 'delete paragraph content quote'
   - 'delete paragraph content remote_video'
   - 'delete paragraph content search'
   - 'delete paragraph content service_list'
@@ -259,6 +261,7 @@ permissions:
   - 'update paragraph content news_list'
   - 'update paragraph content notification'
   - 'update paragraph content phone_number_box'
+  - 'update paragraph content quote'
   - 'update paragraph content remote_video'
   - 'update paragraph content search'
   - 'update paragraph content service_list'
@@ -310,6 +313,7 @@ permissions:
   - 'view paragraph content news_list'
   - 'view paragraph content notification'
   - 'view paragraph content phone_number_box'
+  - 'view paragraph content quote'
   - 'view paragraph content remote_video'
   - 'view paragraph content search'
   - 'view paragraph content service_list'
