--- a/conf/cmi/field.field.node.article.field_content.yml
+++ b/conf/cmi/field.field.node.article.field_content.yml
@@ -11,6 +11,7 @@ dependencies:
     - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.list_of_links
+    - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.remote_video
     - paragraphs.paragraphs_type.text
     - paragraphs.paragraphs_type.unit_search
@@ -41,6 +42,7 @@ settings:
       from_library: from_library
       remote_video: remote_video
       unit_search: unit_search
+      quote: quote
     negate: 0
     target_bundles_drag_drop:
       accordion:
@@ -52,12 +54,30 @@ settings:
       banner:
         weight: -16
         enabled: false
+      blog_list:
+        weight: 40
+        enabled: false
+      card:
+        weight: 41
+        enabled: false
+      card_list:
+        weight: 42
+        enabled: false
       columns:
         weight: -26
         enabled: true
       content_cards:
         weight: -22
         enabled: true
+      content_liftup:
+        weight: 45
+        enabled: false
+      event_list:
+        weight: 46
+        enabled: false
+      events_list:
+        weight: 47
+        enabled: false
       from_library:
         weight: 21
         enabled: true
@@ -70,11 +90,23 @@ settings:
       hero:
         weight: -18
         enabled: false
+      highlighted_text:
+        weight: 52
+        enabled: false
       image:
         weight: -25
         enabled: true
+      info:
+        weight: 54
+        enabled: false
       liftup_with_image:
         weight: -15
+        enabled: false
+      link:
+        weight: 56
+        enabled: false
+      link_internal:
+        weight: 57
         enabled: false
       list_of_links:
         weight: -23
@@ -82,13 +114,43 @@ settings:
       list_of_links_item:
         weight: -17
         enabled: false
+      news_list:
+        weight: 60
+        enabled: false
+      notification:
+        weight: 61
+        enabled: false
+      phone_number_box:
+        weight: 62
+        enabled: false
+      quote:
+        weight: 63
+        enabled: true
       remote_video:
         weight: 27
         enabled: true
+      search:
+        weight: 65
+        enabled: false
+      service_list:
+        weight: 66
+        enabled: false
+      sidebar_text:
+        weight: 67
+        enabled: false
+      subheading:
+        weight: 68
+        enabled: false
+      sujo_embedded:
+        weight: 69
+        enabled: false
       text:
         weight: -27
         enabled: true
       unit_search:
         weight: 28
         enabled: true
+      video:
+        weight: 72
+        enabled: false
 field_type: entity_reference_revisions
