--- a/conf/cmi/search_api.index.events_fi.yml
+++ b/conf/cmi/search_api.index.events_fi.yml
@@ -25,7 +25,7 @@ field_settings:
     label: 'End time'
     datasource_id: 'entity:node'
     property_path: field_end_time
-    type: string
+    type: date
     dependencies:
       config:
         - field.storage.node.field_end_time
@@ -73,7 +73,7 @@ field_settings:
     label: 'Start time'
     datasource_id: 'entity:node'
     property_path: field_start_time
-    type: string
+    type: date
     dependencies:
       config:
         - field.storage.node.field_start_time
@@ -136,13 +136,11 @@ processor_settings:
       preprocess_query: -15
     all_fields: false
     fields:
-      - field_end_time
       - field_id
       - field_image_alt
       - field_image_url
       - field_location
       - field_location_extra_info
-      - field_start_time
       - field_tags
       - field_text
       - title
@@ -162,13 +160,11 @@ processor_settings:
       preprocess_query: -20
     all_fields: false
     fields:
-      - field_end_time
       - field_id
       - field_image_alt
       - field_image_url
       - field_location
       - field_location_extra_info
-      - field_start_time
       - field_tags
       - field_text
       - title
