--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -95,6 +95,12 @@ module:
   paragraphs_type_permissions: 0
   path: 0
   path_alias: 0
+  purge: 0
+  purge_drush: 0
+  purge_processor_cron: 0
+  purge_queuer_coretags: 0
+  purge_tokens: 0
+  purge_ui: 0
   quick_node_clone: 0
   rdf: 0
   readonly_field_widget: 0
@@ -125,6 +131,8 @@ module:
   update: 0
   update_helper: 0
   user: 0
+  varnish_purge_tags: 0
+  varnish_purger: 0
   views_infinite_scroll: 0
   views_ui: 0
   pathauto: 1
