--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "drupal/easy_install": "^10.5",
         "drupal/gin": "3.0.0-beta3",
         "drupal/gin_toolbar": "1.0-beta22",
-        "drupal/hdbt": "^1.0",
+        "drupal/hdbt": "2.3.23",
         "drupal/hdbt_admin": "1.6.6",
         "drupal/helfi_ahjo": "^1.0",
         "drupal/helfi_azure_fs": "^1.0",
